{
    "name": "PlayerController",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "37307df6-8978-4812-958d-ee336eb0d55b",
            "actions": [
                {
                    "name": "Slide",
                    "type": "Button",
                    "id": "a306ed16-ef06-46fa-b66f-db8d83e91284",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7019fa1a-4ef2-424d-a10a-630adb5e87f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Button",
                    "id": "349fae40-6c5b-4425-9ea1-3d227570b081",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveRight",
                    "type": "Button",
                    "id": "5c94aa9c-aed4-4bf8-b65a-1f7d5002e762",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a18adb12-37d7-499a-a99c-1bb6d7be3506",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Slide",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46b9fab4-b456-40ac-acc7-b873183aa3c0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca0f748b-da2a-455e-a014-9e7638ef86bb",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07c896dd-e6e4-4610-ab8f-17eec98e2e90",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}